<resources>
    <string name="app_name">Varsity</string>
    <string name="title_activity_login">Login</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="tandc">Terms and Conditions :\n\n 1)Varsity is an application built to estimate the chances of getting selected into a university.
        \n\n2)The application allows you to select from various number of universities all around the world.
        \n\n3)The application also allows you to choose the university which suits you the best based on  your inputs.
        \n\n4)The score generated by the application is just an estimate.
        \n\n5)The application has no collaboration with any university.
        \n\n6)There might be cases when the final verdict of the university differs from our verdict</string>
    <string name="title_activity_initial">List of Countries :</string>
    <string name="countrySelect">Select a country :</string>
    <string name="noOfUnis">These are the universities in : </string>
    <string name="email">Email :</string>
    <string name="signup">Please enter the following details : </string>
    <string name="user_name">Name :</string>
    <string name="password">Pasoword :</string>
    <string name="nationality">Nationality :</string>
    <string name="age">Age :</string>
    <string name="advancedFragmentNote">This is the advanced mode. Here you will be able to use the varsity estimator which will help you in finding the best university suiting your profile .</string>
    <string name="instruction2">SWIPE LEFT FOR DEMO MODE</string>
    <string name="DemoPage">Get Started</string>
    <string name="guestLogin">Login as guest</string>
    <string name="sex">Sex :</string>
    <string name="gpa">GPA :</string>
    <string name="user_profile">User Profile </string>
    <string name="submit_details">SUBMIT</string>
    <string name="usa">United States of America</string>
    <string name="title_activity_log_sign">LogSign</string>
    <string name="malaysia">Malaysia</string>
    <string name="login">LOGIN</string>
    <string name="SIGNUP">SIGNUP</string>
    <string name="DemoVersion">This is the demo version of Varsity. You can use this version if u have not entered your academic details while signing up.In this mode you can browse through different countries and the university profiles , however you wont be able to use the varsity estimator, To use the varsity estimator you are supposed to have a student account. </string>
    <string name="instruction">SWIPE RIGHT FOR ADVANCED MODE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User name</string>
    <string name="prompt_password">Password</string>
    <string name="signUP">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_filter">Varsity Selector</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_flow_list">Items</string>
    <string name="title_flow_detail">Flow Detail</string>
    <string name="subtitle">Helping you in finding a university since 2016</string>
    <string name="ask_to_signup">Not a member yet</string>
    <string name="join">SIGN UP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="title_activity_modes">Modes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_signup_mode">SignupMode</string>
    <string name="demoSignupIns">Check out the Guest version of the app. If you login as a guest you wont be able to use the Varsity estimator and Suggestions.</string>
    <string name="instruction3">Signing up using the advanced mode lets you access all the features of the varsity app including the varsity estimator and suggestions.</string>
    <string name="instruction4">SWIPE LEFT TO LOGIN AS GUEST</string>
    <string name="title_activity_sign_up_demo">SignUpDemo</string>
    <string name="uniName">Details for :</string>
    <string name="adminDetails">Admission Details</string>
    <string name="enrollment">Enrollment Details</string>
    <string name="Contact">Contact</string>
    <string name="CollegeSpecifics">College Specifics</string>
    <string name="acadReq">Academic Requirements</string>
    <string name="title_activity_guest_navigator">GuestNavigator</string>
    <string name="browse">Browse</string>
    <string name="varsityEst">Varsity Estimator</string>
    <string name="map">Map</string>
    <string name="updateProfile">Update Profile</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="updateNow">Update</string>
    <string name="url">URL</string>
    <string name="universityDetails">University Details</string>
    <string name="requirements">Requirements</string>
    <string name="intakes">Intakes</string>
    <string name="facilities">Facilities</string>
    <string name="choose">Choose Your Examination Type :</string>
    <string name="hi">Hi!</string>
    <string name="note">Assisting you to build a brighter future.</string>
    <string name="welcome">Welcome to</string>
    <string name="website">Website :</string>
    <string name="varstimate">Varsity Estimate</string>
    <string name="varsitySugg">Varsity Suggestions</string>
    <string name="search">Search</string>
    <string name="unis">More than 3000 university and college profiles</string>
    <string name="find">A university that suits you.</string>
    <string name="estimate">Estimate</string>
    <string name="chances">Your chances of getting admitted</string>
    <string name="suggestions">Varsity Suggestions : There might be a university that suits you better.</string>
    <string name="notes">Select \nBrowse  \nEstimate  \nSuggestions</string>
    <string name="facebook_app_id">585035018343765</string>
</resources>
