<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.firstApp.sajid.versity.SecondIntro"
    android:background="#00AEF3">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView9"
        android:src="@drawable/pic"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/estimate"
        android:id="@+id/textView31"
        android:layout_marginTop="80dp"
        android:textColor="#592323"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions"
        android:id="@+id/textView32"
        android:textColor="#592323"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_below="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chances"
        android:id="@+id/textView33"
        android:layout_below="@+id/textView31"
        android:layout_marginTop="10dp"
        android:textColor="#592323"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
