<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00AEF3">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:CardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="my.firstApp.sajid.versity.UsDetailedData"
    android:background="#00AEF3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/uniName"
        android:id="@+id/t1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#805757"
        android:textSize="20dp"
        />


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/my1"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="80dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/smlg1"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="6dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/admissionDetails"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/adminDetails"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/my1"
        android:id="@+id/my2"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:src="@drawable/smlg6"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enrollment"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/my2"
        android:id="@+id/my3"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/smlg4"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Contact"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#563838"

        />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/my3"
        android:id="@+id/my4"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        CardView:cardBackgroundColor="#EDEDED"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/smlg5"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/CollegeSpecifics"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/my4"
        android:id="@+id/cd5"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/smlg2"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/acadReq"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>



</RelativeLayout>
    </ScrollView>