<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00AEF3">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:CardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="my.firstApp.sajid.versity.MyDetailedData"
    android:background="#00AEF3">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/uniName"
        android:id="@+id/m1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/mycv1"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/smlg5"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="6dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/univDetails"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/universityDetails"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/mycv1"
        android:id="@+id/mycv2"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        android:nestedScrollingEnabled="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/smlg2"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/requirements"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/requirements" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/mycv2"
        android:id="@+id/mycv3"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:src="@drawable/smlg1"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="6dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/intakes"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/intakes" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/mycv3"
        android:id="@+id/mycv4"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/facilities"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/facilities"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/facilities" />
    </android.support.v7.widget.CardView>


</RelativeLayout>
</ScrollView>