<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00AEF3">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:CardView="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="my.firstApp.sajid.versity.Selector"
    android:background="#00AEF3">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/uniProf"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="345dp"
        CardView:cardCornerRadius="7dp"
        CardView:contentPadding="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="7dp"
        CardView:cardBackgroundColor="#EDEDED"
        CardView:cardUseCompatPadding="true">

        <com.joooonho.SelectableRoundedImageView
            android:layout_height="225dp"
            android:layout_width="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView3"
            android:src="@drawable/loading3"
            android:scaleType="centerCrop"
            app:sriv_left_top_corner_radius="7dip"
            app:sriv_right_top_corner_radius="7dip"
            app:sriv_left_bottom_corner_radius="0dip"
            app:sriv_right_bottom_corner_radius="0dip"
            app:sriv_border_width="0dip"
            app:sriv_border_color="#ffffff"
            app:sriv_oval="false" />

        <View
            android:layout_marginTop="230dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="1dp"
            android:id="@+id/line"
            android:background="#967676"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="235dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/textView34"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:textColor="#711f1f"
                android:textSize="17dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/textView55"
                android:layout_below="@+id/textView34"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="#711f1f"
                android:textSize="15dp"
                android:layout_alignParentStart="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:id="@+id/textView36"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:textSize="15dp"
                android:textColor="#711f1f"
                android:layout_below="@+id/textView55"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/textView37"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textColor="#711f1f"
                android:layout_alignTop="@+id/textView36"
                android:layout_toEndOf="@+id/textView36" />


        </RelativeLayout>





    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/browse"
        android:layout_below="@id/uniProf"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="4dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/find"
            android:layout_margin="5dp"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="6dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/admissionDetails"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/browse"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/browse"
        android:id="@+id/estimate"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="10dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:src="@drawable/smlg6"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/varsityEst"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/estimate"
        android:id="@+id/map"
        CardView:cardCornerRadius="3dp"
        android:layout_marginTop="10dp"
        CardView:cardBackgroundColor="#EDEDED"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:src="@drawable/map"
            android:layout_alignTop="@+id/my1"
            android:layout_alignParentStart="true"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/map"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="#563838"
            />
    </android.support.v7.widget.CardView>



</RelativeLayout>
</ScrollView>